[tool.poetry]
name = "sanctumpy"
version = "0.1.0"
description = "Python client for the Sanctum API"
authors = ["Defilogist <defilogist@thewise.trade>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
base58 = "^2.1.1"
solana = "^0.34.3"
click = "^8.1.7"

[tool.poetry.scripts]
sanctumpy = "sanctumpy.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
